@@ -1,3 +1,12 @@
+2009-11-01  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/x11/XGServerWindow.m (setWindowHintsForStyle): Revert
+	change to (Motif) window style hints that would add a border
+	around appicons and miniwindows on some window managers.
+
+	* Source/x11/XGServerWindow.m (-miniwindow): Remove code that can
+	make programs unresponsive during window miniaturization.
+
 2009-10-31 Thomas Gamper <icicle@cg.tuwien.ac.at>
 
 	* Source/x11/XGGLFormat.m
